// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<div
  class="Note Note--primary"
  data-test-id="cf-ui-note"
>
  <div
    class="Note__icon"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
  </div>
  <div
    class="Note__info"
  >
    <div
      class="Note__content"
    >
      A piece of information that is relevant to the context the user is currently in.
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<div
  class="Note my-extra-class Note--primary"
  data-test-id="cf-ui-note"
>
  <div
    class="Note__icon"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
  </div>
  <div
    class="Note__info"
  >
    <div
      class="Note__content"
    >
      A piece of information that is relevant to the context the user is currently in.
    </div>
  </div>
</div>
`;

exports[`renders the component with title 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #16875D;
  height: 24px;
  width: 24px;
}

<div
  class="Note Note--positive"
  data-test-id="cf-ui-note"
>
  <div
    class="Note__icon"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
  <div
    class="Note__info"
  >
    <div
      class="Note__title"
    >
      Positive title
    </div>
    <div
      class="Note__content"
    >
      A piece of information that is relevant to the context the user is currently in.
    </div>
  </div>
</div>
`;
